Fix map height on landing page.
Safari was displaying a vertically stretched map. It appears that a
height of 100% means something different to Safari than Chrome and
Firefox. Changed the height from 100% to 2in to maintain aspect ratio
(very roughly).

--- a/portal/www/common/css/portal.css
+++ b/portal/www/common/css/portal.css
@@ -128,7 +128,7 @@ div#map{
 
 div#map img {
  width: 3in;
- height: 100%;
+ height: 2in;
 }
 
 div#map .legend {
